--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,9 @@
 
     <!-- Bonequinho -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=passkey" />
+
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/midias.css">
     <title>Projeto - 4</title>
 </head>
 <body>
@@ -23,11 +25,11 @@
     <main>
         <section id="login">
             <div id="imagem">
-                <img src="../imagens/pexels-img-login-atualizada.jpg" alt="Imagem decorativa">
+            
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed dolorum maiores laborum ipsum reiciendis aperiam vero, culpa, itaque odio harum nam architecto tenetur ea a veritatis recusandae laboriosam! Ducimus?</p>
+                <p>Seja bem-vindo(a) novamente, acesse seu login para entrar!</p>
                 <form action="../js/login.js" method="post">
 
                 </form>
