--- a/html/index.html
+++ b/html/index.html
@@ -47,8 +47,8 @@
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" minlength="8" maxlength="20" autocomplete="current-password" required>
                     </div>
 
-                        <input type="submit" value="Enviar">
-                        <a href="esqueci.html">Esqueci a Senha</a>
+                        <input type="submit" value="Entrar" class="entrar">
+                        <a href="esqueci.html" class="esqueci-senha">Esqueci a Senha</a>
 
                 </form>
             </div>
