Organizando e ajustando projeto

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/midias.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/midias.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Projeto - 4</title>
 </head>
@@ -27,7 +27,7 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente, acesse seu login para entrar!</p>
-                <form action="js/login.js" method="post" autocomplete="on">
+                <form action="src/js/login.js" method="post" autocomplete="on">
                     <div class="login-senha">
                         <label for="ilogin">
                             <span class="material-symbols-outlined" id="boneco">
@@ -54,6 +54,6 @@
             </div>
         </section>
     </main>
-    <script src="js/login.js"></script>
+    <script src="src/js/login.js"></script>
 </body>
 </html>
